--- a/gb/19/3/29/n11149810.md
+++ b/gb/19/3/29/n11149810.md
@@ -1,15 +1,15 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ujfmot367/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ujfmot367/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ujfmot367/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ujfmot367/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ujfmot367/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ujfmot367/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ujfmot367/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ujfmot367/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ujfmot367/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ujfmot367/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ujfmot367/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ujfmot367/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ujfmot367/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ujfmot367/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ujfmot367/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ujfmot367/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ujfmot367/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ujfmot367/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ujfmot367/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ujfmot367/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ujfmot367/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ujfmot367/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ujfmot367/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ujfmot367/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ujfmot367/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ujfmot367/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ujfmot367/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ujfmot367/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ujfmot367/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ujfmot367/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ujfmot367/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ujfmot367/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ujfmot367/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ujfmot367/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ujfmot367/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ujfmot367/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ujfmot367/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ujfmot367/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ujfmot367/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ujfmot367/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ujfmot367/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ujfmot367/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ujfmot367/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ujfmot367/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ujfmot367/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ujfmot367/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ujfmot367/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/xsumwp3307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/xsumwp3307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/xsumwp3307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>中共禁加国油菜籽 看看加拿大人怎么说</h2>
 
 <h6></h6>
 <hr>
-<p>【大纪元2019年03月30日讯】最近，连续有两家<ahref="https://github.com/ujfmot367/djy/blob/master/gb/tag/%E5%8A%A0%E6%8B%BF%E5%A4%A7.md#1">加拿大</a><ahref="https://github.com/ujfmot367/djy/blob/master/gb/tag/%E6%B2%B9%E8%8F%9C%E7%B1%BD%E5%87%BA%E5%8F%A3.md#1">油菜籽出口</a>商被<ahref="https://github.com/ujfmot367/djy/blob/master/gb/tag/%E4%B8%AD%E5%9B%BD.md#1">中国</a>禁购。</p>
-<p><ahref="https://github.com/ujfmot367/djy/blob/master/gb/tag/%E5%8A%A0%E6%8B%BF%E5%A4%A7.md#1">加拿大</a>威特发（Viterra Inc）和理查森（Richardson Inc.）两家企业先后被取消订单和撤销注册登记。</p>
+<p>【大纪元2019年03月30日讯】最近，连续有两家<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E5%8A%A0%E6%8B%BF%E5%A4%A7.md#1">加拿大</a><ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E6%B2%B9%E8%8F%9C%E7%B1%BD%E5%87%BA%E5%8F%A3.md#1">油菜籽出口</a>商被<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E4%B8%AD%E5%9B%BD.md#1">中国</a>禁购。</p>
+<p><ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E5%8A%A0%E6%8B%BF%E5%A4%A7.md#1">加拿大</a>威特发（Viterra Inc）和理查森（Richardson Inc.）两家企业先后被取消订单和撤销注册登记。</p>
 <p>海关总署声称，禁止进口的理由是检出多种检疫性有害生物。</p>
-<p>对此，加拿大油菜籽委员会予以否认，发言人伊那斯（Brian Innes）表示：“业界对加拿大<ahref="https://github.com/ujfmot367/djy/blob/master/gb/tag/%E6%B2%B9%E8%8F%9C%E7%B1%BD%E5%87%BA%E5%8F%A3.md#1">油菜籽出口</a>品质信心十足，全球其他客户都没问题……我们非常困惑，在过去的八个礼拜之间，我们的油菜籽能有什么变化。”</p>
-<p>很明显，此举可以被看做<ahref="https://github.com/ujfmot367/djy/blob/master/gb/tag/%E4%B8%AD%E5%9B%BD.md#1">中国</a>对加拿大报复手段的故意升级。</p>
+<p>对此，加拿大油菜籽委员会予以否认，发言人伊那斯（Brian Innes）表示：“业界对加拿大<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E6%B2%B9%E8%8F%9C%E7%B1%BD%E5%87%BA%E5%8F%A3.md#1">油菜籽出口</a>品质信心十足，全球其他客户都没问题……我们非常困惑，在过去的八个礼拜之间，我们的油菜籽能有什么变化。”</p>
+<p>很明显，此举可以被看做<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E4%B8%AD%E5%9B%BD.md#1">中国</a>对加拿大报复手段的故意升级。</p>
 <p>加拿大总理特鲁多考虑派人前往中国交涉，并表示与中国近几个月的关系令人担忧。</p>
 <p>自从华为事件以来，中国已逮捕两名加拿大公民，同时又迅速从重判处另一名加拿大毒贩死刑。</p>
 <p>中加关系虽然在逐步恶化，贸易关系被政治牵连，但大多数加拿大人似乎对此毫不关心，无动于衷。</p>
@@ -22,7 +22,7 @@
 <p>用一个不太恰当的比喻：对加拿大人来说，中国的重要性只有3%，几乎可以忽略不计；而美国大哥则占了60%，拥有压倒性的政经影响力。</p>
 <p>虽然加拿大出口的油菜籽、油菜籽油以及相关产品，确实有四成被中国买走，但算一算，去年的全年总额也只有区区27亿美元而已。</p>
 <p>与此同时，仅美国每年购买的加拿大商品，就超过了3000亿美元。</p>
-<p>除了中国暴发户喜欢抢购西温哥华的海景豪宅，和加拿大政客每年走个过场的春节祝福，中国这个国家在加拿大人的心里其实并没有什么存在感，也没什么份量。</p>
+<p>除了中国暴发户喜欢抢购西温哥华的海景豪宅，和加拿大政客每年走个过场的新年祝福，中国这个国家在加拿大人的心里其实并没有什么存在感，也没什么份量。</p>
 <p>所以说，中国的爱国网民幻想祖国已经崛起，就好像自己也有多么了不起，全世界都害怕中国人，实在是有一点不知天高地厚。</p>
 <p>加拿大CBC网站下的留言除了加拿大网友和小粉红的争论以外，大多数人都呼吁对中国更强硬，对中国商品以牙还牙。</p>
 <p>有的网友留言说：“看来中国正在成功替代美国成为全球最大的霸凌者。”</p>
@@ -47,47 +47,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/ujfmot367/djy/blob/master/gb/16/12/1/n8546456.md#1">又有华商涉加拿大联邦自由党筹款事件</a></li>
-<li><a href="https://github.com/ujfmot367/djy/blob/master/gb/17/2/16/n8818894.md#1">加拿大：要向中国出口更多安全粮食</a></li>
-<li><a href="https://github.com/ujfmot367/djy/blob/master/gb/19/2/7/n11031107.md#1">中共报复加国新手段 油菜籽入海关异常延迟</a></li>
-<li><a href="https://github.com/ujfmot367/djy/blob/master/gb/21/2/5/n12734323.md#1">遭中共报复 何良懋：加政府政治智慧不足</a></li>
-<li><a href="https://github.com/ujfmot367/djy/blob/master/gb/21/2/2/n12726964.md#1">夏林：昂山素季，“政治正确”的纠结</a></li>
-<li><a href="https://github.com/ujfmot367/djy/blob/master/gb/21/2/2/n12726927.md#1">夏林：Gamestop，千万小散户做翻华尔街之狼</a></li>
-<li><a href="https://github.com/ujfmot367/djy/blob/master/gb/21/1/31/n12724340.md#1">【纪元专栏】听取理性反封锁意见何妨？</a></li>
-<li><a href="https://github.com/ujfmot367/djy/blob/master/gb/21/1/28/n12718943.md#1">拜登上台 何良懋：加拿大经济雪上加霜</a></li>
-<li><a href="https://github.com/ujfmot367/djy/blob/master/gb/21/1/28/n12718828.md#1">【纪元专栏】侵犯隐私反人性 高校监考软件隐忧大</a></li>
-<li><a href="https://github.com/ujfmot367/djy/blob/master/gb/21/1/25/n12711521.md#1">夏林：加拿大总督的麻烦</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/16/12/1/n8546456.md#1">又有华商涉加拿大联邦自由党筹款事件</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/17/2/16/n8818894.md#1">加拿大：要向中国出口更多安全粮食</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/19/2/7/n11031107.md#1">中共报复加国新手段 油菜籽入海关异常延迟</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/19/n13740969.md#1">夏林：疫情后期 加拿大有人欢喜有人愁</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/16/n13738599.md#1">【纪元专栏】欲立法限制抗议权利？进步派政客需三思</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/13/n13734770.md#1">夏林：勿随大流 而忽视了真正有价值的东西</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/13/n13734761.md#1">【纪元专栏】政府电动车补助 实质是劫贫济富</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/5/n13728085.md#1">【纪元专栏】教师本职是传道授业 不是散播激进政治观点</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/5/n13728044.md#1">夏林：电动车还是汽油车？</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/4/29/n13722804.md#1">夏林：加拿大房市还会热吗？</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/ujfmot367/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank">解体中共复兴中华</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/11/4/n11631409.md#1" target="_blank">正元：中共匪帮非我中华之邦</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/10/12/n11583426.md#1" target="_blank">悉尼女律师：修炼让我找到了人生意义</a></li>
+<li><a href="https://github.com/ychojm359/ntdtv/blob/master/gb/2020/04/16/a102824026.md#1" target="_blank">前凤凰网记者：中共迫害法轮功是最大的作恶/a> </li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/30/n10099159.md#1" target="_blank">郑兢业：人吃与吃人（六）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/9/23/n9661042.md#1" target="_blank">修大法顽疾遁无形 做好人春风化雨润无声</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/ujfmot367/djy/blob/master/gb/21/2/4/n12733732.md#1">【解密时分】诺查丹玛斯预言：君主制回归</a></li>
-<li><a href="https://github.com/ujfmot367/djy/blob/master/gb/17/12/29/n10005600.md#1">【西游义趣】之二：《西游记》中神秘的樵夫</a></li>
-<li><a href="https://github.com/ujfmot367/djy/blob/master/gb/21/2/2/n12728948.md#1">【解密时分】斯里兰卡前总统转世农家男孩</a></li>
-<li><a href="https://github.com/ujfmot367/djy/blob/master/gb/21/2/2/n12727507.md#1">2021年2月是个完美矩形 会有大事发生吗？</a></li>
-<li><a href="https://github.com/ujfmot367/djy/blob/master/gb/21/2/5/n12735170.md#1">濒死女子瞬间看到宇宙的历史和上帝</a></li>
-<li><a href="https://github.com/ujfmot367/djy/blob/master/gb/21/2/7/n12738082.md#1">【大话西油】一代宗师（上）：雅克?路易?大卫</a></li>
-<li><a href="https://github.com/ujfmot367/djy/blob/master/gb/21/2/6/n12737563.md#1">【远见快评】神秘预言4度惊现正史 预告霸王出</a></li>
-<li><a href="https://github.com/ujfmot367/djy/blob/master/gb/17/12/29/n10005600.md#1">【西游义趣】之二：《西游记》中神秘的樵夫</a></li>
-<li><a href="https://github.com/ujfmot367/djy/blob/master/gb/21/2/6/n12736566.md#1">习近平及女儿户籍信息被泄内情 上传人发声</a></li>
-<li><a href="https://github.com/ujfmot367/djy/blob/master/gb/21/2/5/n12736482.md#1">【秦鹏直播】蓬佩奥回来了？美国上将警告拜登</a></li>
-<li><a href="https://github.com/ujfmot367/djy/blob/master/gb/21/2/6/n12737763.md#1">布林肯和杨洁篪首次通话 中美声明完全不同</a></li>
-<li><a href="https://github.com/ujfmot367/djy/blob/master/gb/21/2/5/n12736527.md#1">陆官方发布违规艺人复出流程 范冰冰高调现身</a></li>
-<li><a href="https://github.com/ujfmot367/djy/blob/master/gb/21/2/7/n12739306.md#1">控诉遭中共当局封杀 黄秋生长达六年零收入</a></li>
-<li><a href="https://github.com/ujfmot367/djy/blob/master/gb/21/2/7/n12739063.md#1">拍《卧虎藏龙》被吊上天 发哥落地时吓傻李安</a></li>
-<li><a href="https://github.com/ujfmot367/djy/blob/master/gb/21/2/5/n12736044.md#1">几天前胖到撞脸陈赫 周杰伦暴瘦近照震惊网友</a></li>
-<li><a href="https://github.com/ujfmot367/djy/blob/master/gb/21/2/5/n12736214.md#1">刘德华开自媒体 传抖音将砸亿元吸引王菲进驻</a></li>
-<li><a href="https://github.com/ujfmot367/djy/blob/master/gb/21/2/6/n12737892.md#1">鸡蛋怎么存放及可保存多久？日本专家释疑</a></li>
-<li><a href="https://github.com/ujfmot367/djy/blob/master/gb/21/2/6/n12737657.md#1">你的免疫力比疫苗更强大！这样做提升免疫力</a></li>
-<li><a href="https://github.com/ujfmot367/djy/blob/master/gb/21/2/7/n12738266.md#1">神秘老人托梦 泰国渔民捡到罕见橘色珍珠</a></li>
-<li><a href="https://github.com/ujfmot367/djy/blob/master/gb/21/2/6/n12736591.md#1">【重播】英国变种病毒现新突变 再度引起担忧</a></li>
-<li><a href="https://github.com/ujfmot367/djy/blob/master/gb/21/2/6/n12736598.md#1">挑选干香菇、干贝有3秘诀 干货下锅前必做1件事</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/20/3/16/n11943195.md#1">日媒体人评台湾防疫2大功臣 第一名竟非陈时中</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/20/3/16/n11945071.md#1">【新闻看点】官媒忙降温？赵立坚及五毛被打脸</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/20/3/17/n11946346.md#1">【现场视频】听信中共谎言 返京人挤爆机场</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/20/3/17/n11945722.md#1">【翻墙必看】官媒反常 批赵立坚“下作”？</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/20/3/17/n11948259.md#1">中共撤驻华美媒记者工作证 蓬佩奥强烈回应</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/20/3/17/n11946544.md#1">台歌仔戏国宝小凤仙病逝 享寿80岁　</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/20/3/15/n11942589.md#1">赵立坚甩锅病毒源自美国 艺人黄秋生狠酸中共</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/20/3/17/n11947993.md#1">伊朗隐瞒疫情 来自伊朗的台湾女婿爆真相</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/20/3/15/n11942781.md#1">潘迎紫呼吸道感染急就医 被要求检测中共病毒</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/20/3/15/n11942415.md#1">西班牙疫情大爆发 梁咏琪一家三口封城前返港</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/20/3/11/n11933369.md#1">清朝学士三奇梦 是谁掌握他的一生？</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/20/3/11/n11933376.md#1">僧人精准预言 琅琊三孩童竟是“真一品”</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/13/1/31/n3790016.md#1">米开朗基罗Michelangelo（1）早年生涯</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/20/3/17/n11946008.md#1">名人纷确诊 《权力游戏》《复仇者》演员染疫</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/20/3/12/n11936269.md#1">缘自天上来 这对夫妻是星官下凡</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ujfmot367/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ujfmot367/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/3/29/n11149810.htm">中共禁加国油菜籽 看看加拿大人怎么说</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/xsumwp3307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/xsumwp3307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/3/29/n11149810.htm">中共禁加国油菜籽 看看加拿大人怎么说</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ujfmot367/djy/blob/master/gb/19/3/29/n11149810.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ujfmot367/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ujfmot367/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ujfmot367/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ujfmot367/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ujfmot367/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ujfmot367/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ujfmot367/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ujfmot367/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ujfmot367/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ujfmot367/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ujfmot367/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ujfmot367/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ujfmot367/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ujfmot367/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ujfmot367/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ujfmot367/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ujfmot367/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ujfmot367/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/ujfmot367/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ujfmot367/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ujfmot367/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ujfmot367/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ujfmot367/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ujfmot367/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/ujfmot367/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ujfmot367/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ujfmot367/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ujfmot367/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ujfmot367/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ujfmot367/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ujfmot367/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ujfmot367/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ujfmot367/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ujfmot367/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ujfmot367/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ujfmot367/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ujfmot367/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ujfmot367/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ujfmot367/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ujfmot367/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ujfmot367/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ujfmot367/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ujfmot367/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ujfmot367/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ujfmot367/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ujfmot367/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ujfmot367/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ujfmot367/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/xsumwp3307/djy/blob/master/gb/19/3/29/n11149810.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/xsumwp3307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/xsumwp3307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/xsumwp3307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
